apps/account-service/kustomize/overlays/dev/base/common-app/templates/deployment.yaml
---
# Source: common-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: "harbor.local/banking-demo/account-service:1"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
