apps/account-service/kustomize/overlays/dev/base/common-app/templates/service.yaml
---
# Source: common-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: account-service
