apps/account-service/kustomize/overlays/dev/base/common-app/templates/httproute.yaml
---
# Source: common-app/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account-service
spec:
  parentRefs:
  - name: banking-gateway
    namespace: kong
  hostnames:
  - "banking.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/account
    backendRefs:
    - name: account-service
      port: 8080
